src/Components/CharacterInfo/DescriptionPage/DescriptionPage.module.css
.descriptionContainer{
  text-shadow: 0px 0px 4px rgba(0, 0, 0, 0.5);
  font-size: 30px;
  text-align: center;
  font-weight: 500;
  padding: 10px;
  position: absolute;
  bottom: 160px;
  overflow-y: auto;
  max-height: 50vh;
  width: 100%;
}
@media only screen and (max-width: 730px) {
    .descriptionContainer{
        position: relative;
        bottom: unset;
        margin-bottom: 10px;
        max-height: 300px;
    }
}

